--- a/assets/_vars.scss
+++ b/assets/_vars.scss
@@ -5,7 +5,10 @@
 
 $white-color: #FFFFFF;
 $black-color: #000000;
-
+$lt-gray: rgba( 188, 190, 192, 1 );
+$md-gray: rgba( 88, 89, 91, 1 );
+$darkest: rgba( 51, 51, 51, 1 );
+$blackish: #231f20;
 
 // ---------------------------------------------------
 //    Shadow
@@ -19,9 +22,10 @@ $light-shadow: 0 0 1px rgba(0,0,0,0.15);
 //    Typography
 // ---------------------------------------------------
 
-
-$serif-font: 'Roboto Slab', serif;
-$sans-font: 'Roboto', serif;
+$font-color: #6d6f71;
+$robo-font: 'Roboto', Helvetica, Arial, sans-serif;
+$rale-font: 'Raleway', Helvetica, Arial, sans-serif;
+$fa: 'FontAwesome', sans-serif;
 
 
 // ---------------------------------------------------
