Continue styling of footer for mobile

--- a/assets/_content.scss
+++ b/assets/_content.scss
@@ -1,3 +1,7 @@
 /*--------------------------------------------------------------
 # Main Content Layout Classes
 --------------------------------------------------------------*/
+
+.menu-menu-1-container {
+	text-transform: uppercase;
+}
