--- a/assets/_footer.scss
+++ b/assets/_footer.scss
@@ -1,9 +1,39 @@
 .main-footer {
 	background-color: $darkest;
 	color: $white-color;
+	padding: 30px 0;
 
 	> .flexxed {
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+	}
+
+	.col1 {
+		margin: 0 0 20px 0;
+	}
+
+	.col2 {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-pack: end;
+		-ms-flex-pack: end;
+		        justify-content: flex-end;
+
+		> div {
+			margin-bottom: 20px;
+		}
+	}
+
+	.address,
+	.contact {
+		display: block;
 	}
 
 	.footer-block {
@@ -16,5 +46,13 @@
 
 	.title {
 		color: $lt-gray;
+	}
+
+	.social-media-links {
+		margin: 0 auto;
+	}
+
+	.legal-box {
+		font-size: 12px;
 	}
 }
