--- a/assets/style.scss
+++ b/assets/style.scss
@@ -275,7 +275,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: $robo-font, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
