--- a/assets/_media-queries.scss
+++ b/assets/_media-queries.scss
@@ -25,15 +25,47 @@
 	}
 
 	.main-header {
+		color: $lt-gray;
+
+		a {
+			color: $lt-gray;
+		}
 
 		.main-navigation {
-			display: block;
+			-webkit-box-align: end;
+			-ms-flex-align: end;
+			align-items: flex-end;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-pack: end;
+			-ms-flex-pack: end;
+	        justify-content: flex-end;
 		}
 
 		.social-media-links {
-			display: inherit;
+			-webkit-box-align: end;
+			-ms-flex-align: end;
+			align-items: flex-end;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-pack: space-evenly;
+			-ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
+		}
+
+		.site-motto {
+			display: none;
 		}
 	}
+
+.main-navigation {
+
+	li {
+		margin: 0 20px 0 0;
+	}
+}
 
 	// Footer
 	.main-footer {
