--- a/assets/_header.scss
+++ b/assets/_header.scss
@@ -53,6 +53,9 @@
 	-o-transition: all 0.25s ease-in-out;
 	transition: all 0.25s ease-in-out;
 
+    -webkit-box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.20);
+    box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.20);
+
 	.main-navigation {
 		display: none;
 	}
