--- a/assets/_content.scss
+++ b/assets/_content.scss
@@ -2,6 +2,104 @@
 # Main Content Layout Classes
 --------------------------------------------------------------*/
 
+// Header
 .menu-menu-1-container {
 	text-transform: uppercase;
+}
+
+// Main Content
+.site-content {
+	padding: 150px 0 0 0;
+}
+
+.home {
+
+	h1 {
+		color: $blackish;
+		font-family: $rale-font;
+		font-weight: 700;
+		line-height: 1em;
+		text-align: center;
+		text-transform: uppercase;
+	}
+}
+
+.page-banner {
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 200px;
+}
+
+.page-logo {
+	position: relative;
+}
+
+.logo-container {
+	background-color: $white-color;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 80%;
+	border-radius: 100%;
+	height: 200px;
+	left: 0;
+	margin: 0 auto;
+	position: absolute;
+	right: 0;
+	top: -100px;
+	width: 200px;
+}
+
+.company-divisions {
+	background-color: #d7d7d7;
+	padding: 30px 0;
+
+	.constrain {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
+	}
+}
+
+a.company-division {
+	color: $white-color;
+	display: block;
+	font-size: 14px;
+	margin: 0 0 15px 0;
+	padding: 20px;
+	overflow: hidden;
+
+	&:last-of-type {
+		margin: 0;
+	}
+
+	.division-block-logo {
+		height: 75px;
+	}
+
+	p {
+		line-height: 1.3em;
+	}
+
+	.division-link {
+		display: inline-block;
+		font-weight: 700;
+		position: relative;
+		text-transform: uppercase;
+
+		&:after {
+			content: '\f0da';
+			font-family: $fa;
+			font-size: 16px;
+			position: absolute;
+			right: -10px;
+			top: -1px;
+		}
+	}
 }
