--- a/assets/_media-queries.scss
+++ b/assets/_media-queries.scss
@@ -1,5 +1,51 @@
+@media only screen and ( min-width: 568px ) {
+	
+	// Page Content
+	.page-banner {
+		height: 240px
+	}
+
+	.logo-container {
+		height: 230px;
+		width: 230px;
+	}
+
+	.company-divisions {
+
+		.constrain {
+			flex-direction: row;
+			justify-content: space-between;
+		}
+	}
+
+	a.company-division {
+		width: 48.5%;
+
+		&:last-of-type {
+			margin: 0 0 15px 0;
+		}
+
+		&:hover {
+			background-color: $darkest !important;
+		}
+	}
+}
+
 @media only screen and ( min-width: 768px ) {
 
+	// Page Content
+	.page-banner {
+		height: 275px;
+	}
+
+	
+	.logo-container {
+		height: 275px;
+		top: -140px;
+		width: 275px;
+	}
+
+	// Footer
 	.main-footer {
 
 		> .flexxed {
@@ -13,6 +59,16 @@
 	}
 }
 
+@media only screen and ( min-width: 960px ) {
+
+	.home {
+
+		h1 {
+			font-size: 36px;
+		}
+	}
+}
+ 
 @media only screen and ( min-width: 1024px ) {
 	
 	// Header
@@ -65,6 +121,33 @@
 		li {
 			margin: 0 20px 0 0;
 		}
+	}
+
+	// Page Content
+	.main-content {
+		padding-bottom: 20px;
+	}
+
+	.site-content {
+		padding: 120px 0 0 0;
+	}
+
+	.page-banner {
+		height: 325px;
+	}
+
+	.logo-container {
+		height: 325px;
+		top: -160px;
+		width: 325px;
+	}
+
+	.company-divisions {
+		padding: 45px 0 30px 0;
+	}
+
+	a.company-division {
+	    width: 32.5%;
 	}
 
 	// Footer
