--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ th {
 /*--------------------------------------------------------------
 # Site Helper Classes
 --------------------------------------------------------------*/
-/* line 6, assets/_classes.scss */
+/* line 5, assets/_classes.scss */
 .constrain {
   display: block;
   margin: 0 auto;
@@ -306,19 +306,19 @@ th {
   padding: 0 10px;
 }
 
-/* line 14, assets/_classes.scss */
+/* line 13, assets/_classes.scss */
 .flexxed {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-/* line 20, assets/_classes.scss */
+/* line 19, assets/_classes.scss */
 .social-media-links {
   width: 40%;
   max-width: 120px;
 }
-/* line 24, assets/_classes.scss */
+/* line 23, assets/_classes.scss */
 .social-media-links.flexxed {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -328,7 +328,7 @@ th {
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
-/* line 34, assets/_classes.scss */
+/* line 33, assets/_classes.scss */
 .social-media-links a {
   position: relative;
   display: block;
@@ -336,7 +336,7 @@ th {
   height: 24px;
   text-indent: -99999px;
 }
-/* line 42, assets/_classes.scss */
+/* line 41, assets/_classes.scss */
 .social-media-links a.facebook-icon:before, .social-media-links a.twitter-icon:before, .social-media-links a.gplus-icon:before, .social-media-links a.linkedin-icon:before, .social-media-links a.youtube-icon:before, .social-media-links a.vimeo-icon:before, .social-media-links a.pinterest-icon:before {
   position: absolute;
   top: 0;
@@ -348,37 +348,37 @@ th {
   font-size: 18px;
   text-indent: 0;
 }
-/* line 61, assets/_classes.scss */
+/* line 60, assets/_classes.scss */
 .social-media-links a.facebook-icon:before {
   content: '\f09a';
 }
-/* line 65, assets/_classes.scss */
+/* line 64, assets/_classes.scss */
 .social-media-links a.twitter-icon:before {
   content: '\f099';
 }
-/* line 69, assets/_classes.scss */
+/* line 68, assets/_classes.scss */
 .social-media-links a.gplus-icon:before {
   content: '\f0d5';
 }
-/* line 73, assets/_classes.scss */
+/* line 72, assets/_classes.scss */
 .social-media-links a.linkedin-icon:before {
   content: '\f0e1';
 }
-/* line 77, assets/_classes.scss */
+/* line 76, assets/_classes.scss */
 .social-media-links a.youtube-icon:before {
   content: '\f16a';
   font-size: 16px;
 }
-/* line 82, assets/_classes.scss */
+/* line 81, assets/_classes.scss */
 .social-media-links a.vimeo-icon:before {
   content: '\f27d';
 }
-/* line 86, assets/_classes.scss */
+/* line 85, assets/_classes.scss */
 .social-media-links a.pinterest-icon:before {
   content: '\f231';
 }
 
-/* line 93, assets/_classes.scss */
+/* line 92, assets/_classes.scss */
 .back-to-top {
   display: block;
   border-radius: 3px;
@@ -397,7 +397,7 @@ th {
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
-/* line 113, assets/_classes.scss */
+/* line 112, assets/_classes.scss */
 .back-to-top.visible {
   right: 10px;
   -webkit-transition: all .5s ease-in-out;
@@ -407,7 +407,7 @@ th {
   transition: all .5s ease-in-out;
 }
 
-/* line 124, assets/_classes.scss */
+/* line 123, assets/_classes.scss */
 .back-to-top:after {
   color: #FFFFFF;
   content: '\f0d8';
@@ -1096,23 +1096,18 @@ a:active {
 }
 
 /* line 776, assets/style.scss */
-.hentry {
-  margin: 0 0 1.5em;
-}
-
-/* line 780, assets/style.scss */
 .updated:not(.published) {
   display: none;
 }
 
-/* line 784, assets/style.scss */
+/* line 780, assets/style.scss */
 .page-content,
 .entry-content,
 .entry-summary {
   margin: 1.5em 0 0;
 }
 
-/* line 790, assets/style.scss */
+/* line 786, assets/style.scss */
 .page-links {
   clear: both;
   margin: 0 0 1.5em;
@@ -1124,20 +1119,120 @@ a:active {
 /*--------------------------------------------------------------
 # Main Content Layout Classes
 --------------------------------------------------------------*/
-/* line 5, assets/_content.scss */
+/* line 6, assets/_content.scss */
 .menu-menu-1-container {
   text-transform: uppercase;
+}
+
+/* line 11, assets/_content.scss */
+.site-content {
+  padding: 150px 0 0 0;
+}
+
+/* line 17, assets/_content.scss */
+.home h1 {
+  color: #231f20;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  line-height: 1em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/* line 27, assets/_content.scss */
+.page-banner {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 200px;
+}
+
+/* line 34, assets/_content.scss */
+.page-logo {
+  position: relative;
+}
+
+/* line 38, assets/_content.scss */
+.logo-container {
+  background-color: #FFFFFF;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  border-radius: 100%;
+  height: 200px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: -100px;
+  width: 200px;
+}
+
+/* line 53, assets/_content.scss */
+.company-divisions {
+  background-color: #d7d7d7;
+  padding: 30px 0;
+}
+/* line 57, assets/_content.scss */
+.company-divisions .constrain {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+/* line 70, assets/_content.scss */
+a.company-division {
+  color: #FFFFFF;
+  display: block;
+  font-size: 14px;
+  margin: 0 0 15px 0;
+  padding: 20px;
+  overflow: hidden;
+}
+/* line 78, assets/_content.scss */
+a.company-division:last-of-type {
+  margin: 0;
+}
+/* line 82, assets/_content.scss */
+a.company-division .division-block-logo {
+  height: 75px;
+}
+/* line 86, assets/_content.scss */
+a.company-division p {
+  line-height: 1.3em;
+}
+/* line 90, assets/_content.scss */
+a.company-division .division-link {
+  display: inline-block;
+  font-weight: 700;
+  position: relative;
+  text-transform: uppercase;
+}
+/* line 96, assets/_content.scss */
+a.company-division .division-link:after {
+  content: '\f0da';
+  font-family: "FontAwesome", sans-serif;
+  font-size: 16px;
+  position: absolute;
+  right: -10px;
+  top: -1px;
 }
 
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
-/* line 804, assets/style.scss */
+/* line 800, assets/style.scss */
 .comment-content a {
   word-wrap: break-word;
 }
 
-/* line 808, assets/style.scss */
+/* line 804, assets/style.scss */
 .bypostauthor {
   display: block;
 }
@@ -1208,7 +1303,7 @@ a:active {
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
-/* line 821, assets/style.scss */
+/* line 817, assets/style.scss */
 .page-content .wp-smiley,
 .entry-content .wp-smiley,
 .comment-content .wp-smiley {
@@ -1219,7 +1314,7 @@ a:active {
 }
 
 /* Make sure embeds and iframes fit their containers. */
-/* line 831, assets/style.scss */
+/* line 827, assets/style.scss */
 embed,
 iframe,
 object {
@@ -1227,7 +1322,7 @@ object {
 }
 
 /* Make sure logo link wraps around logo image. */
-/* line 838, assets/style.scss */
+/* line 834, assets/style.scss */
 .custom-logo-link {
   display: inline-block;
 }
@@ -1235,25 +1330,25 @@ object {
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
-/* line 845, assets/style.scss */
+/* line 841, assets/style.scss */
 .wp-caption {
   margin-bottom: 1.5em;
   max-width: 100%;
 }
 
-/* line 850, assets/style.scss */
+/* line 846, assets/style.scss */
 .wp-caption img[class*="wp-image-"] {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 856, assets/style.scss */
+/* line 852, assets/style.scss */
 .wp-caption .wp-caption-text {
   margin: 0.8075em 0;
 }
 
-/* line 860, assets/style.scss */
+/* line 856, assets/style.scss */
 .wp-caption-text {
   text-align: center;
 }
@@ -1261,12 +1356,12 @@ object {
 /*--------------------------------------------------------------
 ## Galleries
 --------------------------------------------------------------*/
-/* line 867, assets/style.scss */
+/* line 863, assets/style.scss */
 .gallery {
   margin-bottom: 1.5em;
 }
 
-/* line 871, assets/style.scss */
+/* line 867, assets/style.scss */
 .gallery-item {
   display: inline-block;
   text-align: center;
@@ -1274,82 +1369,131 @@ object {
   width: 100%;
 }
 
-/* line 878, assets/style.scss */
+/* line 874, assets/style.scss */
 .gallery-columns-2 .gallery-item {
   max-width: 50%;
 }
 
-/* line 882, assets/style.scss */
+/* line 878, assets/style.scss */
 .gallery-columns-3 .gallery-item {
   max-width: 33.33333%;
 }
 
-/* line 886, assets/style.scss */
+/* line 882, assets/style.scss */
 .gallery-columns-4 .gallery-item {
   max-width: 25%;
 }
 
-/* line 890, assets/style.scss */
+/* line 886, assets/style.scss */
 .gallery-columns-5 .gallery-item {
   max-width: 20%;
 }
 
-/* line 894, assets/style.scss */
+/* line 890, assets/style.scss */
 .gallery-columns-6 .gallery-item {
   max-width: 16.66667%;
 }
 
-/* line 898, assets/style.scss */
+/* line 894, assets/style.scss */
 .gallery-columns-7 .gallery-item {
   max-width: 14.28571%;
 }
 
-/* line 902, assets/style.scss */
+/* line 898, assets/style.scss */
 .gallery-columns-8 .gallery-item {
   max-width: 12.5%;
 }
 
-/* line 906, assets/style.scss */
+/* line 902, assets/style.scss */
 .gallery-columns-9 .gallery-item {
   max-width: 11.11111%;
 }
 
-/* line 910, assets/style.scss */
+/* line 906, assets/style.scss */
 .gallery-caption {
   display: block;
 }
 
+@media only screen and (min-width: 568px) {
+  /* line 4, assets/_media-queries.scss */
+  .page-banner {
+    height: 240px;
+  }
+
+  /* line 8, assets/_media-queries.scss */
+  .logo-container {
+    height: 230px;
+    width: 230px;
+  }
+
+  /* line 15, assets/_media-queries.scss */
+  .company-divisions .constrain {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  /* line 21, assets/_media-queries.scss */
+  a.company-division {
+    width: 48.5%;
+  }
+  /* line 24, assets/_media-queries.scss */
+  a.company-division:last-of-type {
+    margin: 0 0 15px 0;
+  }
+  /* line 28, assets/_media-queries.scss */
+  a.company-division:hover {
+    background-color: #333333 !important;
+  }
+}
 @media only screen and (min-width: 768px) {
-  /* line 5, assets/_media-queries.scss */
+  /* line 37, assets/_media-queries.scss */
+  .page-banner {
+    height: 275px;
+  }
+
+  /* line 42, assets/_media-queries.scss */
+  .logo-container {
+    height: 275px;
+    top: -140px;
+    width: 275px;
+  }
+
+  /* line 51, assets/_media-queries.scss */
   .main-footer > .flexxed {
     flex-direction: row;
     justify-content: space-between;
   }
-  /* line 10, assets/_media-queries.scss */
+  /* line 56, assets/_media-queries.scss */
   .main-footer .footer-block {
     width: 50%;
   }
 }
+@media only screen and (min-width: 960px) {
+  /* line 66, assets/_media-queries.scss */
+  .home h1 {
+    font-size: 36px;
+  }
+}
 @media only screen and (min-width: 1024px) {
-  /* line 19, assets/_media-queries.scss */
+  /* line 75, assets/_media-queries.scss */
   .mobile-nav {
     display: none;
   }
 
-  /* line 23, assets/_media-queries.scss */
+  /* line 79, assets/_media-queries.scss */
   .mobile-nav-btn {
     display: none;
   }
 
-  /* line 27, assets/_media-queries.scss */
+  /* line 83, assets/_media-queries.scss */
   .main-header {
     color: #bcbec0;
   }
-  /* line 30, assets/_media-queries.scss */
+  /* line 86, assets/_media-queries.scss */
   .main-header a {
     color: #bcbec0;
   }
-  /* line 34, assets/_media-queries.scss */
+  /* line 90, assets/_media-queries.scss */
   .main-header .main-navigation {
     -webkit-box-align: end;
     -ms-flex-align: end;
@@ -1361,7 +1505,7 @@ object {
     -ms-flex-pack: end;
     justify-content: flex-end;
   }
-  /* line 46, assets/_media-queries.scss */
+  /* line 102, assets/_media-queries.scss */
   .main-header .social-media-links {
     -webkit-box-align: end;
     -ms-flex-align: end;
@@ -1373,23 +1517,55 @@ object {
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
   }
-  /* line 58, assets/_media-queries.scss */
+  /* line 114, assets/_media-queries.scss */
   .main-header .site-motto {
     display: none;
   }
 
-  /* line 65, assets/_media-queries.scss */
+  /* line 121, assets/_media-queries.scss */
   .main-navigation li {
     margin: 0 20px 0 0;
   }
 
-  /* line 73, assets/_media-queries.scss */
+  /* line 127, assets/_media-queries.scss */
+  .main-content {
+    padding-bottom: 20px;
+  }
+
+  /* line 131, assets/_media-queries.scss */
+  .site-content {
+    padding: 120px 0 0 0;
+  }
+
+  /* line 135, assets/_media-queries.scss */
+  .page-banner {
+    height: 325px;
+  }
+
+  /* line 139, assets/_media-queries.scss */
+  .logo-container {
+    height: 325px;
+    top: -160px;
+    width: 325px;
+  }
+
+  /* line 145, assets/_media-queries.scss */
+  .company-divisions {
+    padding: 45px 0 30px 0;
+  }
+
+  /* line 149, assets/_media-queries.scss */
+  a.company-division {
+    width: 32.5%;
+  }
+
+  /* line 156, assets/_media-queries.scss */
   .main-footer .col1 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
-  /* line 79, assets/_media-queries.scss */
+  /* line 162, assets/_media-queries.scss */
   .main-footer .col2 {
     -ms-flex-line-pack: end;
     align-content: flex-end;
@@ -1404,23 +1580,23 @@ object {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  /* line 93, assets/_media-queries.scss */
+  /* line 176, assets/_media-queries.scss */
   .main-footer .col2 a {
     color: #bcbec0;
   }
-  /* line 97, assets/_media-queries.scss */
+  /* line 180, assets/_media-queries.scss */
   .main-footer .col2 .menu-menu-1-container {
     margin: 0;
   }
-  /* line 101, assets/_media-queries.scss */
+  /* line 184, assets/_media-queries.scss */
   .main-footer .col2 .social-media-links {
     margin: 0;
   }
-  /* line 106, assets/_media-queries.scss */
+  /* line 189, assets/_media-queries.scss */
   .main-footer .menu-menu-1-container {
     width: 60%;
   }
-  /* line 109, assets/_media-queries.scss */
+  /* line 192, assets/_media-queries.scss */
   .main-footer .menu-menu-1-container ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1430,25 +1606,25 @@ object {
     justify-content: space-between;
     margin: 0 30px 0 0;
   }
-  /* line 120, assets/_media-queries.scss */
+  /* line 203, assets/_media-queries.scss */
   .main-footer .social-media-links {
     margin: 0;
   }
-  /* line 124, assets/_media-queries.scss */
+  /* line 207, assets/_media-queries.scss */
   .main-footer .legal-box {
     display: inline-block;
     padding: 0 20px 0 0;
     position: relative;
   }
-  /* line 129, assets/_media-queries.scss */
+  /* line 212, assets/_media-queries.scss */
   .main-footer .legal-box:last-of-type {
     padding: 0;
   }
-  /* line 132, assets/_media-queries.scss */
+  /* line 215, assets/_media-queries.scss */
   .main-footer .legal-box:last-of-type:after {
     content: none;
   }
-  /* line 137, assets/_media-queries.scss */
+  /* line 220, assets/_media-queries.scss */
   .main-footer .legal-box:after {
     content: '|';
     position: absolute;
@@ -1456,29 +1632,29 @@ object {
     top: 0;
   }
 
-  /* line 147, assets/_media-queries.scss */
+  /* line 230, assets/_media-queries.scss */
   .footer-address {
     text-align: left;
   }
-  /* line 150, assets/_media-queries.scss */
+  /* line 233, assets/_media-queries.scss */
   .footer-address .address {
     display: inline-block;
     padding: 0 5px 0 0;
   }
-  /* line 155, assets/_media-queries.scss */
+  /* line 238, assets/_media-queries.scss */
   .footer-address .contact {
     display: inline-block;
     padding: 0 15px 0 0;
     position: relative;
   }
-  /* line 160, assets/_media-queries.scss */
+  /* line 243, assets/_media-queries.scss */
   .footer-address .contact:after {
     content: '|';
     position: absolute;
     right: 3px;
     top: 0;
   }
-  /* line 167, assets/_media-queries.scss */
+  /* line 250, assets/_media-queries.scss */
   .footer-address .contact:last-of-type:after {
     content: '';
   }
