--- a/assets/_media-queries.scss
+++ b/assets/_media-queries.scss
@@ -1,3 +1,14 @@
+@media only screen and ( min-width: 480px ) {
+
+	// 404 Page
+	.error-404 {
+
+		.error-logo {
+			max-width: 460px;
+		}
+	}
+}
+
 @media only screen and ( min-width: 568px ) {
 	
 	// Page Content
@@ -234,6 +245,10 @@
 			display: inline-block;
 			padding: 0 5px 0 0;
 		}
+	}
+
+	.footer-contact {
+		height: 30px;
 
 		.contact {
 			display: inline-block;
