--- a/style.css
+++ b/style.css
@@ -611,41 +611,39 @@ table {
 /* Just for funs and it looks cool */
 /* line 2, assets/_elements.scss */
 ::-moz-selection {
-  background: #fcd700;
   color: #fff;
   text-shadow: none;
 }
 
-/* line 8, assets/_elements.scss */
+/* line 7, assets/_elements.scss */
 ::selection {
-  background: orange;
   color: #fff;
   text-shadow: none;
 }
 
-/* line 14, assets/_elements.scss */
+/* line 12, assets/_elements.scss */
 body {
   color: #6d6f71;
   line-height: 1.65em;
 }
 
-/* line 19, assets/_elements.scss */
+/* line 17, assets/_elements.scss */
 ol {
   margin: 0 0 1.5em 1em;
 }
 
-/* line 23, assets/_elements.scss */
+/* line 21, assets/_elements.scss */
 ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-/* line 29, assets/_elements.scss */
+/* line 27, assets/_elements.scss */
 ul li {
   list-style-type: none;
 }
 
-/* line 34, assets/_elements.scss */
+/* line 32, assets/_elements.scss */
 a {
   text-decoration: none;
   -webkit-transition: all 0.2s ease-in-out;
@@ -654,7 +652,7 @@ a {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 43, assets/_elements.scss */
+/* line 41, assets/_elements.scss */
 a:hover {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -1202,19 +1200,20 @@ a.company-division:last-of-type {
 /* line 82, assets/_content.scss */
 a.company-division .division-block-logo {
   height: 75px;
+  -ms-interpolation-mode: bicubic;
 }
-/* line 86, assets/_content.scss */
+/* line 87, assets/_content.scss */
 a.company-division p {
   line-height: 1.3em;
 }
-/* line 90, assets/_content.scss */
+/* line 91, assets/_content.scss */
 a.company-division .division-link {
   display: inline-block;
   font-weight: 700;
   position: relative;
   text-transform: uppercase;
 }
-/* line 96, assets/_content.scss */
+/* line 97, assets/_content.scss */
 a.company-division .division-link:after {
   content: '\f0da';
   font-family: "FontAwesome", sans-serif;
@@ -1222,6 +1221,31 @@ a.company-division .division-link:after {
   position: absolute;
   right: -10px;
   top: -1px;
+}
+
+/* line 109, assets/_content.scss */
+.error-404 {
+  text-align: center;
+}
+/* line 112, assets/_content.scss */
+.error-404 .page-title {
+  color: #231f20;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
+  line-height: 1.15em;
+  text-transform: uppercase;
+}
+/* line 119, assets/_content.scss */
+.error-404 .page-content {
+  padding: 30px 0;
+}
+/* line 123, assets/_content.scss */
+.error-404 p {
+  font-size: 18px;
+}
+/* line 127, assets/_content.scss */
+.error-404 .error-logo {
+  opacity: 0.5;
+  width: auto;
 }
 
 /*--------------------------------------------------------------
@@ -1414,86 +1438,92 @@ object {
   display: block;
 }
 
+@media only screen and (min-width: 480px) {
+  /* line 6, assets/_media-queries.scss */
+  .error-404 .error-logo {
+    max-width: 460px;
+  }
+}
 @media only screen and (min-width: 568px) {
-  /* line 4, assets/_media-queries.scss */
+  /* line 15, assets/_media-queries.scss */
   .page-banner {
     height: 240px;
   }
 
-  /* line 8, assets/_media-queries.scss */
+  /* line 19, assets/_media-queries.scss */
   .logo-container {
     height: 230px;
     width: 230px;
   }
 
-  /* line 15, assets/_media-queries.scss */
+  /* line 26, assets/_media-queries.scss */
   .company-divisions .constrain {
     flex-direction: row;
     justify-content: space-between;
   }
 
-  /* line 21, assets/_media-queries.scss */
+  /* line 32, assets/_media-queries.scss */
   a.company-division {
     width: 48.5%;
   }
-  /* line 24, assets/_media-queries.scss */
+  /* line 35, assets/_media-queries.scss */
   a.company-division:last-of-type {
     margin: 0 0 15px 0;
   }
-  /* line 28, assets/_media-queries.scss */
+  /* line 39, assets/_media-queries.scss */
   a.company-division:hover {
     background-color: #333333 !important;
   }
 }
 @media only screen and (min-width: 768px) {
-  /* line 37, assets/_media-queries.scss */
+  /* line 48, assets/_media-queries.scss */
   .page-banner {
     height: 275px;
   }
 
-  /* line 42, assets/_media-queries.scss */
+  /* line 53, assets/_media-queries.scss */
   .logo-container {
     height: 275px;
     top: -140px;
     width: 275px;
   }
 
-  /* line 51, assets/_media-queries.scss */
+  /* line 62, assets/_media-queries.scss */
   .main-footer > .flexxed {
     flex-direction: row;
     justify-content: space-between;
   }
-  /* line 56, assets/_media-queries.scss */
+  /* line 67, assets/_media-queries.scss */
   .main-footer .footer-block {
     width: 50%;
   }
 }
 @media only screen and (min-width: 960px) {
-  /* line 66, assets/_media-queries.scss */
+  /* line 77, assets/_media-queries.scss */
   .home h1 {
     font-size: 36px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  /* line 75, assets/_media-queries.scss */
+  /* line 86, assets/_media-queries.scss */
   .mobile-nav {
     display: none;
   }
 
-  /* line 79, assets/_media-queries.scss */
+  /* line 90, assets/_media-queries.scss */
   .mobile-nav-btn {
     display: none;
   }
 
-  /* line 83, assets/_media-queries.scss */
+  /* line 94, assets/_media-queries.scss */
   .main-header {
     color: #bcbec0;
   }
-  /* line 86, assets/_media-queries.scss */
+  /* line 97, assets/_media-queries.scss */
   .main-header a {
     color: #bcbec0;
   }
-  /* line 90, assets/_media-queries.scss */
+  /* line 101, assets/_media-queries.scss */
   .main-header .main-navigation {
     -webkit-box-align: end;
     -ms-flex-align: end;
@@ -1505,7 +1535,7 @@ object {
     -ms-flex-pack: end;
     justify-content: flex-end;
   }
-  /* line 102, assets/_media-queries.scss */
+  /* line 113, assets/_media-queries.scss */
   .main-header .social-media-links {
     -webkit-box-align: end;
     -ms-flex-align: end;
@@ -1517,55 +1547,55 @@ object {
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
   }
-  /* line 114, assets/_media-queries.scss */
+  /* line 125, assets/_media-queries.scss */
   .main-header .site-motto {
     display: none;
   }
 
-  /* line 121, assets/_media-queries.scss */
+  /* line 132, assets/_media-queries.scss */
   .main-navigation li {
     margin: 0 20px 0 0;
   }
 
-  /* line 127, assets/_media-queries.scss */
+  /* line 138, assets/_media-queries.scss */
   .main-content {
     padding-bottom: 20px;
   }
 
-  /* line 131, assets/_media-queries.scss */
+  /* line 142, assets/_media-queries.scss */
   .site-content {
     padding: 120px 0 0 0;
   }
 
-  /* line 135, assets/_media-queries.scss */
+  /* line 146, assets/_media-queries.scss */
   .page-banner {
     height: 325px;
   }
 
-  /* line 139, assets/_media-queries.scss */
+  /* line 150, assets/_media-queries.scss */
   .logo-container {
     height: 325px;
     top: -160px;
     width: 325px;
   }
 
-  /* line 145, assets/_media-queries.scss */
+  /* line 156, assets/_media-queries.scss */
   .company-divisions {
     padding: 45px 0 30px 0;
   }
 
-  /* line 149, assets/_media-queries.scss */
+  /* line 160, assets/_media-queries.scss */
   a.company-division {
     width: 32.5%;
   }
 
-  /* line 156, assets/_media-queries.scss */
+  /* line 167, assets/_media-queries.scss */
   .main-footer .col1 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
-  /* line 162, assets/_media-queries.scss */
+  /* line 173, assets/_media-queries.scss */
   .main-footer .col2 {
     -ms-flex-line-pack: end;
     align-content: flex-end;
@@ -1580,23 +1610,23 @@ object {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  /* line 176, assets/_media-queries.scss */
+  /* line 187, assets/_media-queries.scss */
   .main-footer .col2 a {
     color: #bcbec0;
   }
-  /* line 180, assets/_media-queries.scss */
+  /* line 191, assets/_media-queries.scss */
   .main-footer .col2 .menu-menu-1-container {
     margin: 0;
   }
-  /* line 184, assets/_media-queries.scss */
+  /* line 195, assets/_media-queries.scss */
   .main-footer .col2 .social-media-links {
     margin: 0;
   }
-  /* line 189, assets/_media-queries.scss */
+  /* line 200, assets/_media-queries.scss */
   .main-footer .menu-menu-1-container {
     width: 60%;
   }
-  /* line 192, assets/_media-queries.scss */
+  /* line 203, assets/_media-queries.scss */
   .main-footer .menu-menu-1-container ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1606,25 +1636,25 @@ object {
     justify-content: space-between;
     margin: 0 30px 0 0;
   }
-  /* line 203, assets/_media-queries.scss */
+  /* line 214, assets/_media-queries.scss */
   .main-footer .social-media-links {
     margin: 0;
   }
-  /* line 207, assets/_media-queries.scss */
+  /* line 218, assets/_media-queries.scss */
   .main-footer .legal-box {
     display: inline-block;
     padding: 0 20px 0 0;
     position: relative;
   }
-  /* line 212, assets/_media-queries.scss */
+  /* line 223, assets/_media-queries.scss */
   .main-footer .legal-box:last-of-type {
     padding: 0;
   }
-  /* line 215, assets/_media-queries.scss */
+  /* line 226, assets/_media-queries.scss */
   .main-footer .legal-box:last-of-type:after {
     content: none;
   }
-  /* line 220, assets/_media-queries.scss */
+  /* line 231, assets/_media-queries.scss */
   .main-footer .legal-box:after {
     content: '|';
     position: absolute;
@@ -1632,30 +1662,35 @@ object {
     top: 0;
   }
 
-  /* line 230, assets/_media-queries.scss */
+  /* line 241, assets/_media-queries.scss */
   .footer-address {
     text-align: left;
   }
-  /* line 233, assets/_media-queries.scss */
+  /* line 244, assets/_media-queries.scss */
   .footer-address .address {
     display: inline-block;
     padding: 0 5px 0 0;
   }
-  /* line 238, assets/_media-queries.scss */
-  .footer-address .contact {
+
+  /* line 250, assets/_media-queries.scss */
+  .footer-contact {
+    height: 30px;
+  }
+  /* line 253, assets/_media-queries.scss */
+  .footer-contact .contact {
     display: inline-block;
     padding: 0 15px 0 0;
     position: relative;
   }
-  /* line 243, assets/_media-queries.scss */
-  .footer-address .contact:after {
+  /* line 258, assets/_media-queries.scss */
+  .footer-contact .contact:after {
     content: '|';
     position: absolute;
     right: 3px;
     top: 0;
   }
-  /* line 250, assets/_media-queries.scss */
-  .footer-address .contact:last-of-type:after {
+  /* line 265, assets/_media-queries.scss */
+  .footer-contact .contact:last-of-type:after {
     content: '';
   }
 }
