--- a/assets/style.scss
+++ b/assets/style.scss
@@ -434,15 +434,12 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
+	border: 0;
 	background: #e6e6e6;
 	color: rgba(0, 0, 0, .8);
 	font-size: 12px;
 	font-size: 0.75rem;
 	line-height: 1;
-	padding: .6em 1em .4em;
 }
 
 button:hover,
@@ -480,8 +477,8 @@ input[type="datetime-local"],
 input[type="color"],
 textarea {
 	color: #666;
-	border: 1px solid #ccc;
-	border-radius: 3px;
+	border: 0;
+	border-radius: 0;
 	padding: 3px;
 }
 
