--- a/assets/_classes.scss
+++ b/assets/_classes.scss
@@ -89,6 +89,65 @@
 	}
 }
 
+.company-divisions {
+	background-color: #d7d7d7;
+	padding: 30px 0;
+
+	.constrain {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
+	}
+}
+
+a.company-division {
+	color: $white-color;
+	display: block;
+	font-size: 14px;
+	margin: 0 0 15px 0;
+	padding: 20px;
+	overflow: hidden;
+
+	&:hover, &:visited {
+		color: $white-color;
+	}
+
+	&:last-of-type {
+		margin: 0;
+	}
+
+	.division-block-logo {
+		height: 75px;
+		-ms-interpolation-mode: bicubic;
+	}
+
+	p {
+		line-height: 1.3em;
+	}
+
+	.division-link {
+		display: inline-block;
+		font-weight: 700;
+		position: relative;
+		text-transform: uppercase;
+
+		&:after {
+			content: '\f0da';
+			font-family: $fa;
+			font-size: 16px;
+			position: absolute;
+			right: -10px;
+			top: -1px;
+		}
+	}
+}
+
 .back-to-top {
 	display: block;
 	border-radius: 3px;
