--- a/assets/_content.scss
+++ b/assets/_content.scss
@@ -156,6 +156,38 @@
 	padding: 12px !important;
 }
 
+.contact-sidebar {
+	margin: 0 0 20px 0;
+}
+
+.sidebar-comp-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+	flex-direction: column;
+
+	& > div {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		flex-direction: column;
+	}
+	
+	.top-info {
+		margin: 0 0 10px 0;
+	}
+	
+	.title {
+		font-weight: 700;
+	}
+}
+
 .gmap {
     margin: 0 0 -8px 0;
 }
