--- a/assets/_media-queries.scss
+++ b/assets/_media-queries.scss
@@ -239,6 +239,12 @@
 	    width: 49.25%;
 	}
 
+	// Contact Page
+	.contact-sidebar {
+		max-width: 327px;
+		padding: 20px 0 0 0;
+	}
+
 	// Footer
 	.main-footer {
 
