Updated styles for main contact form input border colors

--- a/assets/_content.scss
+++ b/assets/_content.scss
@@ -146,6 +146,7 @@
 .main-content-form input,
 .main-content-form textarea {
 	background-color: #f6f6f6;
+	border: 1px solid #e1e1e1;
 	margin: 0 0 10px 0;
 	padding: 3px 5px !important;
 	width: 100%;
